# dld

./: .gitignore  .qmake.conf  README  TODO  config.pri  dld.pro  local.pri_example
doc/: databaseCreation.txt
doc/ProjectReport/: bibliography.bib  chapter_Analysis.tex  chapter_Design.tex  chapter_Evaluation.tex  chapter_Implementation.tex  chapter_ProjectIntroduction.tex  chapter_Research.tex  chapter_Testing.tex  chapter_UserManuals.tex  chapter_abbreviations.tex  chapter_future.tex  chapter_references.tex  contents.tex  dedication.tex  fyp_project_report.kilepr  preamble.tex  project_report.tex  simonSpecial.sty  titlepage.tex
doc/ProjectReport/Appendixes/: Gantt.tex  Logbook.tex  prototypeSource.tex  severalCodes.tex  systemTestPlans.tex
doc/ProjectReport/Diagrams/: projectStructure.dia  projectStructureNew.dia  systemLayers.flw
doc/ProjectReport/SavedFilesFromTheInternet/: GeometryConicSectionCircleIntersection.htm  MagicMap-Ein System zur kooperativen Positionsbestimmung ueber WLAN.htm  Schnittpunkte zweier Kreise.html  october_2007_web_server_survey.htm  trilat2.cpp
doc/ProjectReport/SavedFilesFromTheInternet/MagicMap-Ein System zur kooperativen Positionsbestimmung ueber WLAN-Dateien/: form.css
doc/ProjectReport/SavedFilesFromTheInternet/october_2007_web_server_survey-Dateien/: stylesheet2006.css
doc/ProjectReport/UMLDiagrams/: DLD-New.xmi  DLD.xmi  gantt.kplato
doc/ProjectReport/bibtexStyle/: harvplainnat.bst
src/: CMakeLists.txt  TODO
src/common/: 3dPoint.h  3dPoint.h~  common.pro  connect2DBDialog.ui  dldDisplayPos.h~  dldExchangeClient.cpp  dldExchangeClient.cpp~  dldExchangeClient.h  dldExchangeClient.h~  dldExchangeClientDBus.cpp  dldExchangeClientDBus.cpp~  dldExchangeClientDBus.h  dldExchangeClientDBus.h~  dldExchangeClientSSL.cpp  dldExchangeClientSSL.cpp~  dldExchangeClientSSL.h  dldExchangeClientSSL.h~  dldExchangeClientStrategy.h  dldExchangeClientStrategy.h~  dldExchangeServer.cpp  dldExchangeServer.cpp~  dldExchangeServer.h  dldExchangeServer.h~  dldExchangeServerDBusPosition.cpp  dldExchangeServerDBusPosition.cpp~  dldExchangeServerDBusPosition.h  dldExchangeServerDBusPosition.h~  dldExchangeServerDBusStrength.cpp  dldExchangeServerDBusStrength.cpp~  dldExchangeServerDBusStrength.h  dldExchangeServerDBusStrength.h~  dldExchangeServerSSL.cpp  dldExchangeServerSSL.cpp~  dldExchangeServerSSL.h  dldExchangeServerSSL.h~  dldExchangeServerStrategy.h  dldExchangeServerStrategy.h~  dldLog.cpp  dldLog.h  dldMap.cpp  (+19 more)
src/firmware/: Makefile  modprobeUsbserial.sh  openbeacon.asm  openbeacon.elf  openbeacon.map
src/firmware/application/: cmd.c  dbgu.c  dbgu.h  led.h  main.c  openbeacon.h  proto.c  sort.c  xxtea.c
src/firmware/application/nRF24L01/: nRF_API.c  nRF_CMD.c  nRF_CMD.h
src/firmware/os/core/ARM7_AT91SAM7S/: lib_AT91SAM7.h
src/firmware/tagfirmware-enc/: Makefile  created_counted_firmware.sh
src/firmware/tagfirmware-enc/src/: config.h  config_generated.h  config_generated.h.in  main.c  main.h  nRF_CMD.c  timer.c  timer.h  xxtea.c
src/gainData/: CMakeLists.txt  Doxyfile  dldGain.cpp  dldGain.h  gainData.pro  main.cpp
src/gainData/deviceStrategies/: ddwrtstrategy.cpp  ddwrtstrategy.h  deviceStrategy.h  dldSimulateStrategy.cpp  dldSimulateStrategy.h  hwSimMainWindow.ui  obUSBStrategy.cpp  obUSBStrategy.h
src/generatePosition/: 2dPositionStrategy.cpp  2dPositionStrategy.h  CMakeLists.txt  Doxyfile  dldGeneratePosition.cpp  dldGeneratePosition.h  generatePosition.pro  main.cpp  positionStrategy.h
src/mapGen/: mainWindow.ui  mapGen.pro
src/obConfig/: CMakeLists.txt  Doxyfile  aboutOpenBeacon.ui  main.cpp  mainWindow.ui  obConfig.cpp  obConfig.h  obConfig.pro  obConfiguratorHelp.ui  preferences.ui  replaceCommandsDialog.ui
src/pdAdmin/: CMakeCache.txt  CMakeLists.txt  Doxyfile  dldPdAdmin.cpp  dldPdAdmin.h  main.cpp  mainWindow.ui  pdAdmin.pro
src/showPos/: CMakeLists.txt  Doxyfile  databaseListDock.ui  dldShowPos.cpp  dldShowPos.h  dldShowPos.qrc  main.cpp  personInfoWidget.ui  qrc_dldShowPos.cpp  selectConnectionDialog.ui  showPos.pro  tagInfoDialog.cpp  tagInfoDialog.h  tagViewInfo.h
